--- a/src/App/UI/Components/Pages/Home/Home.css
+++ b/src/App/UI/Components/Pages/Home/Home.css
@@ -1,11 +1,31 @@
-/* .Home {
-    background: url('');
+.brand-cards {
+    display: flex;
+    flex-direction: column;
+    margin-left: 104.5px;
+}
+
+.card-one {
+    display: flex;
+    gap: 28px;
+}
+
+.card-two {
+    display: flex;
+    gap: 28px;
+}
+
+.home-content {
+    background: url('https://t3.ftcdn.net/jpg/06/28/25/36/360_F_628253694_Czf6Y1SnQnIVUAL0tsOWXh2loOdsIFzS.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 90vh;
     position: relative;
-} */
+}
+
+.homep {
+    margin-top: 150px;
+}
 
 .home-paragraph p {
     font-size: 50px;
@@ -34,14 +54,51 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.home-brand {
+    margin-top: 50px;
+}
+
+.brand-cards {
+    display: flex;
+    gap: 28px;
+}
+
+.brand-title {
+    margin-left: 104.5px;
+}
+
+.brand-title h4 {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .home-card {
     display: flex;
     justify-content: center;
-    gap: 3px;
+    gap: 28.5px;
     margin-top: -15px;
+    margin-left: 13px;
 }
 
 .home-description {
     font-family: sans-serif;
     margin-top: -35px;
+}
+
+.home-discount {
+    margin-top: 50px;
+    margin-left: 104.5px;
+}
+
+.discount-title h4 {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.discount-cards {
+    display: flex;
+    gap: 84.5px;
+    align-items: center;
+    justify-content: center;
+    margin-left: -102.5px;
 }
