--- a/src/App/UI/Components/PaymentCard/PaymentCard.css
+++ b/src/App/UI/Components/PaymentCard/PaymentCard.css
@@ -1,4 +1,24 @@
 .payment-card {
-    border: 1px solid black;
-    border-radius: 10px;
+    border: 2px solid rgb(182, 180, 180);
+    border-radius: 5px;
+    width: 60px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1px;
+    margin: 5px;
+    position: relative;
+    /* Add position relative */
+}
+
+.payment-card img {
+    max-width: 50px;
+    max-height: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
 }
