--- a/src/App/UI/Components/ImageCard/ImageCard.css
+++ b/src/App/UI/Components/ImageCard/ImageCard.css
@@ -15,6 +15,7 @@
 
 .image-card p {
     position: absolute;
+    overflow: hidden;
     margin-top: -150px;
     left: 50%;
     transform: translateX(-50%);
