--- a/src/App/UI/Components/Pages/Home/Home.css
+++ b/src/App/UI/Components/Pages/Home/Home.css
@@ -39,6 +39,7 @@
     max-width: 35%;
     margin-left: 90px;
     padding: 5px;
+    position: relative;
 }
 
 .card {
@@ -101,4 +102,19 @@
     align-items: center;
     justify-content: center;
     margin-left: -102.5px;
+}
+
+.info-cards {
+    display: flex;
+    gap: 41.5px;
+}
+
+.info-title h4 {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.home-info {
+    margin-left: 104.5px;
+    margin-top: 50px;
 }
